# sdl_studies

./: .gitignore  CMakeLists.txt  README.md
assets/: a.txt
include/: assets.h  canvas.h  font.h  game.h  geometry.h
src/: main.cpp
